[gd_scene load_steps=12 format=3 uid="uid://eaa0usuqt6y0"]

[ext_resource type="Script" uid="uid://bh3lrdhrgmbga" path="res://script/alternative_choice.gd" id="1_oxf70"]
[ext_resource type="Texture2D" uid="uid://cxo06hnpen10p" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoul9SlicesA-Sheet.png" id="2_feaer"]
[ext_resource type="FontFile" uid="uid://bfd8lxmo20ddl" path="res://asset/font/Everyday_Tiny_Bold.ttf" id="2_oxf70"]
[ext_resource type="Texture2D" uid="uid://dyndhdo6l5rw8" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250421cursorTarget-Sheet.png" id="3_03ssu"]
[ext_resource type="Shader" uid="uid://d3tyrfwlw2c1g" path="res://asset/shader/LightweightPixelPerfectOutline.gdshader" id="4_5pyst"]
[ext_resource type="Texture2D" uid="uid://xhtju1ikrq5i" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240707dragonHeaderA.png" id="5_c8fvn"]
[ext_resource type="Texture2D" uid="uid://djosx0lsv35m8" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240709dragonButtonA-Sheet.png" id="6_wgmrc"]
[ext_resource type="FontFile" uid="uid://cttiyfnemjlwx" path="res://asset/font/Everyday_Tiny_Bold_Original.ttf" id="7_2mfvq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rlfqs"]
atlas = ExtResource("3_03ssu")
region = Rect2(129, 42, 58, 21)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7w23x"]
shader = ExtResource("4_5pyst")
shader_parameter/outline_color = Color(1, 1, 1, 0)
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_time_scale = 0.0
shader_parameter/use_monochrome = false
shader_parameter/monochrome_color = Color(0.9933676, 0.9933675, 1.4631748e-05, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0bnq"]
atlas = ExtResource("6_wgmrc")
region = Rect2(203, 2, 94, 31)

[node name="AlternativeChoice" type="Node2D"]
z_index = 800
script = ExtResource("1_oxf70")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
z_index = 999
custom_minimum_size = Vector2(540, 360)
offset_right = 540.0
offset_bottom = 360.0
mouse_filter = 2

[node name="Node2D" type="Node2D" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="Node2D"]
offset_left = 144.0
offset_top = 91.0
offset_right = 400.0
offset_bottom = 224.0
texture = ExtResource("2_feaer")
patch_margin_left = 28
patch_margin_top = 20
patch_margin_right = 28
patch_margin_bottom = 16

[node name="TextureRect" type="TextureRect" parent="Node2D"]
offset_left = 243.0
offset_top = 214.0
offset_right = 301.0
offset_bottom = 235.0
texture = SubResource("AtlasTexture_rlfqs")
stretch_mode = 2

[node name="NinePatchRect2" type="NinePatchRect" parent="Node2D"]
material = SubResource("ShaderMaterial_7w23x")
offset_left = 143.0
offset_top = 110.0
offset_right = 401.0
offset_bottom = 152.0
texture = ExtResource("5_c8fvn")
region_rect = Rect2(0, 0, 96, 32)
patch_margin_left = 24
patch_margin_top = 12
patch_margin_right = 24
patch_margin_bottom = 19

[node name="TextureRect2" type="TextureRect" parent="Node2D"]
offset_left = 172.0
offset_top = 167.0
offset_right = 268.0
offset_bottom = 198.0
texture = SubResource("AtlasTexture_e0bnq")

[node name="TextureRect3" type="TextureRect" parent="Node2D"]
offset_left = 281.0
offset_top = 167.0
offset_right = 377.0
offset_bottom = 198.0
texture = SubResource("AtlasTexture_e0bnq")

[node name="button_container" type="HBoxContainer" parent="."]
z_index = 820
offset_left = 181.0
offset_top = 170.0
offset_right = 372.0
offset_bottom = 194.0
theme_override_constants/separation = 30

[node name="Button1" type="Button" parent="button_container"]
z_index = 820
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_2mfvq")
theme_override_font_sizes/font_size = 8
text = "Upgrade"
flat = true

[node name="Button2" type="Button" parent="button_container"]
z_index = 820
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_2mfvq")
theme_override_font_sizes/font_size = 8
text = "Uplevel"
flat = true

[node name="Label" type="Label" parent="."]
z_index = 820
offset_left = 173.0
offset_top = 110.0
offset_right = 370.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("2_oxf70")
theme_override_font_sizes/font_size = 12
text = "Choose"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="button_container/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="button_container/Button2" to="." method="_on_button_2_pressed"]
